# geojit-research-cli

./: .gitignore  README.md  SP20241406115209223TTK - balance_sheet.csv  SP20241406115209223TTK - change_in_estimates.csv  SP20241406115209223TTK - profit_loss.csv  SP20241406115209223TTK - quarterly_profit_loss.csv  agent_financial_extraction.jsonl  agent_financial_extraction.py  compare_ingestion.py  eval_all_pipelines.py  eval_results_SP20241406115209223TTK.json  eval_results_text.json  eval_results_text_SP20241406115209223TTK.json  eval_results_vision_SP20241406115209223TTK.json  extract_tables.py  ingest_all_pdfs.py  ingest_test_pdf.py  main.py  package-lock.json  package.json  parsed_output_Hindalco Industries_20240604.json  parsed_output_SP20241406115209223TTK.json  parsed_output_text.json  parsed_output_text_SP20241406115209223TTK.json  parsed_output_vision_SP20241006120459650BATA.json  parsed_output_vision_SP20241006175727243VA.json  parsed_output_vision_SP20241406115209223TTK.json  pipeline_eval_results.txt  pyproject.toml  recreate_test_db.py  schema_analysis.json  test_ingest_agent.py  test_single_ingest.py  test_text_parser.py
.claude/: settings.local.json
geojit/: __init__.py  chat.py  chunking.py  coding_agent.py  config.py  db.py  embeddings.py  error_log.py  ingest.py  ingest_agent.py  ingest_files_api.py  ingest_vision.py  ingest_zerox.py  metadata_extractor.py  pdf_evaluator.py  pdf_parser.py  pdf_parser_text.py  qdrant_store.py  retriever.py
